Fix for missing bracket error in set_name function Added in  name attribute to the input to the index html that I had forgotten Started adding to-do list functionality and build out to-do list html page

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <div>
         <form action="{{url_for('set_name')}}" method="post">
         <label for="name">What is your name?</label>
-        <input type="text" id="name" required>
+        <input type="text" name="name" required>
         <button type="submit">Enter</button>
         </form>
     </div>
