--- a/templates/todo.html
+++ b/templates/todo.html
@@ -35,5 +35,6 @@
             {% endfor %}
         </ul>
     </div>
+    <script src="{{ url_for('static', filename='script.js')}}"></script>
 </body>
 </html>
