Added routing for remaining pages to fix error in venv Updated and added navigation code in template pages to align with python Fixed issue in js file that prevented tasks completing due to a incorrect variable definition

--- a/templates/todo.html
+++ b/templates/todo.html
@@ -8,13 +8,11 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="index.html">HouseMate</a></li>
-            <li><a href="todo.html">To-Do List</a></li>
-            <li><a href="completed.html">Completed Tasks</a></li>
-            <li><a href="leaderboard.html">Leaderboard</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
+        <a href="{{ url_for('index') }}">HouseMate</a>
+        <a href="{{ url_for('todo') }}">To-Do List</a>
+        <a href="{{ url_for('completed') }}">Completed Tasks</a>
+        <a href="{{ url_for('leaderboard') }}">Leaderboard</a>
+        <a href="{{ url_for('about') }}">About</a>
     </nav>
     <div>
         <h2>To Do List:</h2>
@@ -27,13 +25,13 @@
             {% for task in tasks %}
             <li>
                 {{ task.task }} (added by {{ task.added_by }})
-                <form method="post" action="{{ url_for('complete_task', task_index=loop.index0) }}" class="complete-task-form">
+                <form action="{{ url_for('complete_task', task_index=loop.index0) }}" method="post" class="complete-task-form">
                     <button type="submit">Complete</button>
                 </form>
             </li>
             {% endfor %}
         </ul>
     </div>
-    <script src="{{ url_for('static', filename='script.js')}}"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
