--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("../images/background_img.jpg");
+    background-image: url("{{ url_for('static', filename='background_img.jpg') }}");
     background-size: 100%;
     background-position: center;
     background-repeat: no-repeat;
