--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\static\style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>HouseMate | Home</title>
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="index.html">HouseMate</a></li>
-            <li><a href="todo.html">To-Do List</a></li>
-            <li><a href="completed.html">Completed Tasks</a></li>
-            <li><a href="leaderboard.html">Leaderboard</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
+        <a href="{{ url_for('index') }}">HouseMate</a>
+        <a href="{{ url_for('todo') }}">To-Do List</a>
+        <a href="{{ url_for('completed') }}">Completed Tasks</a>
+        <a href="{{ url_for('leaderboard') }}">Leaderboard</a>
+        <a href="{{ url_for('about') }}">About</a>
     </nav>
+
     <main>
         <h1>TEST</h1>
         <div>
