Added a requirements doc for Render Fixed typo in Leaderboard

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -21,7 +21,7 @@
             <table>
                 <tr>
                     <th>Name</th>
-                    <th>No. tasks complted</th>
+                    <th>Completed Tasks</th>
                 </tr>
                 <tr>
                     {% for housemate, score in housemate %}
