--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,9 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("{{ url_for('static', filename='background_img.jpg') }}");
+    /* background-image: url("{{ url_for('static', filename='background_img.jpg') }}");
     background-size: 100%;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
 }
 
 nav {
@@ -11,15 +11,53 @@ nav {
     overflow: hidden;
     position: sticky;
     z-index: 100;
+    width: 100%;
+    height: 100px;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+
+nav a {
+    text-decoration: none;
+    float: left;
+    display: block;
+    color: black;
+    padding: 40px 16px;
+    font-weight: bold;
+    text-align: center;
 }
 
-nav ul li {
+.background_img {
+    max-width: 100%;
+    height: auto;
+    z-index: 0;
+    position: static;
+}
+
+.content_container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* height: 50%; */
+    background-color: white;
+    z-index: 10;
+    display: inline-flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.name input {
+    flex: 1;
+}
+
+/* nav ul li {
     float: left;
 }
 
@@ -32,7 +70,7 @@ nav ul li a{
     line-height: 50px;
     padding: 14px 16px;
     height: 50px;
-}
+} */
 
 
 div {
