--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,11 @@
     </nav>
 
     <main>
-        <h1>TEST</h1>
         <div>
-            <form action="{{url_for('set_name')}}" method="post">
+            <img src="{{ url_for('static', filename='background_img.jpg')}}" alt="overhead view of spray bottle & sponge on a yellow backdrop" class="background_img">
+        </div>
+        <div class="content_container">
+            <form action="{{url_for('set_name')}}" method="post" class="name">
             <label for="name">What is your name?</label>
             <input type="text" name="name" required>
             <button type="submit">Enter</button>
