--- a/templates/todo.html
+++ b/templates/todo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>HouseMate | Home</title>
 </head>
 <body>
@@ -15,7 +15,10 @@
         <a href="{{ url_for('about') }}">About</a>
     </nav>
     <div>
-        <h2>To Do List:</h2>
+        <img src="{{ url_for('static', filename='background_img.jpg')}}" alt="overhead view of spray bottle & sponge on a yellow backdrop" class="background_img">
+    </div>
+    <h2>To Do List:</h2>
+    <div class="content_container">
         <form method="post">
             <label for="task">Add a new task</label>
             <input type="text" name="task" required>
