Added Styling for universal items Index - added html code for circle symbol to fix list display Added styling for index and todo pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="{{ url_for('index') }}">HouseMate</a>
+        <a href="{{ url_for('index') }}" class="active">HouseMate</a>
         <a href="{{ url_for('todo') }}">To-Do List</a>
         <a href="{{ url_for('completed') }}">Completed Tasks</a>
         <a href="{{ url_for('leaderboard') }}">Leaderboard</a>
