--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,8 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    /* background-image: url("{{ url_for('static', filename='background_img.jpg') }}");
-    background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat; */
+    font-family: Arial, Helvetica, sans-serif;   
 }
 
+/* Navigation Styling */
 nav {
     background-color: #d9d9d9;
     overflow: hidden;
@@ -26,6 +23,22 @@ nav a {
     text-align: center;
 }
 
+nav a:hover {
+    text-decoration: underline;
+}
+
+.active {
+    text-decoration: none;
+    float: left;
+    display: block;
+    color: #558dc2;
+    padding: 40px 16px;
+    font-weight: bold;
+    text-align: center;
+}
+
+/* Background Image */
+
 .background_img {
     max-width: 100%;
     height: auto;
@@ -33,19 +46,63 @@ nav a {
     position: static;
 }
 
+div {
+    background-color: #F7D048;
+}
+
+/* Universal header styling */
+
+h2 {
+    position: fixed;
+    top: 140px;
+    left: 80px;
+    z-index: 10;
+    display: inline-flex;
+}
+
+/* Content Div styling */
+
 .content_container {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* height: 50%; */
     background-color: white;
     z-index: 10;
-    display: inline-flex;
     align-items: center;
     padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+/* Footer Styling */
+
+footer{
+    background-color: #d9d9d9;
+    overflow: hidden;
+    position: sticky;
+    z-index: 100;
+    width: 100%;
+    height: 100px;
+}
+
+footer a {
+    text-decoration: none;
+    margin: auto;
+    width: 50%;
+    display: block;
+    color: black;
+    padding: 40px 16px;
+    font-weight: bold;
+    text-align: center;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: #558dc2
+}
+
+/* HouseMate (enter name page) Styling */
 .name {
     display: flex;
     flex-direction: column;
@@ -53,31 +110,116 @@ nav a {
     gap: 10px;
 }
 
+.name label {
+    color: #000;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 25px;
+    margin: 65px 100px 20px 100px;
+}
+
 .name input {
-    flex: 1;
+    font-size: 16px;
+    box-sizing: border-box;
+    border-radius: 2px;
+    border: 1px solid #A9A9A9;
+    background: #FDFDFD;
+    width: 340px;
+    height: 39px;
+    flex-shrink: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-/* nav ul li {
-    float: left;
+.name button {
+    width: 150px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 23px;
+    border: none;
+    background: #A2C6E7;
+    color: #000;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
-nav ul li a{
-    display: block;
-    font-weight: bold;
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    line-height: 50px;
-    padding: 14px 16px;
-    height: 50px;
-} */
-
-
-div {
-    background-color: #ffffff;
+.name button:hover {
+    background: #558dc2;
 }
 
-footer{
-    background-color: #d9d9d9;
+/* To-Do List Page Styling */
+
+.add-task {
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
+.add-task label {
+    color: #000;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 25px;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+
+.add-task input {
+    font-size: 16px;
+    box-sizing: border-box;
+    border-radius: 2px;
+    border: 1px solid #A9A9A9;
+    background: #FDFDFD;
+    height: 30px;
+    flex-shrink: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.add-task button {
+    width: auto;
+    height: 30px;
+    border-radius: 23px;
+    border: none;
+    background: #A2C6E7;
+    color: #000;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 18px;
+    margin-left: 10px;
+    margin-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.add-task button:hover {
+    background: #558dc2;
+}
+
+.to-do-list li {
+    color: #000;
+    font-size: 16px;
+    line-height: 25px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.to-do-list button {
+    width: auto;
+    height: 20px;
+    border-radius: 23px;
+    border: 1px solid #A2C6E7;
+    color: #000;
+    font-size: 14px;
+    line-height: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.to-do-list button:hover {
+    background-color: #A2C6E7;
+}
