--- a/static/style.css
+++ b/static/style.css
@@ -223,3 +223,45 @@ footer a:hover {
 .to-do-list button:hover {
     background-color: #A2C6E7;
 }
+
+/* Leaderboard Styling */
+
+table {
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-right: 100px;
+}
+
+th, td {
+    padding: 8px;
+    border:  #A2C6E7 .1px solid;
+
+}
+
+thead {
+    background-color:  #A2C6E7;
+    color: white;
+}
+
+tbody tr:nth-child(even) {
+    background-color: white;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #d9d9d9;
+}
+
+/* About styling */
+
+h4 {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+p {
+    font-size: 16px;
+    line-height: 1.5;
+}
