--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;   
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Navigation Styling */
@@ -7,6 +8,7 @@ nav {
     background-color: #d9d9d9;
     overflow: hidden;
     position: sticky;
+    top: 0;
     z-index: 100;
     width: 100%;
     height: 100px;
@@ -32,7 +34,6 @@ nav a:hover {
     float: left;
     display: block;
     color: #558dc2;
-    padding: 40px 16px;
     font-weight: bold;
     text-align: center;
 }
@@ -40,15 +41,18 @@ nav a:hover {
 /* Background Image */
 
 .background_img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     z-index: 0;
     position: static;
 }
 
-div {
-    background-color: #F7D048;
-}
+/* .bg {
+    background-color: yellow;
+    background-image: url(/static/background_img.jpg);
+} */
+
+
 
 /* Universal header styling */
 
@@ -73,6 +77,7 @@ h2 {
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
 }
 
 /* Footer Styling */
@@ -81,6 +86,7 @@ footer{
     background-color: #d9d9d9;
     overflow: hidden;
     position: sticky;
+    bottom: 0;
     z-index: 100;
     width: 100%;
     height: 100px;
@@ -115,7 +121,7 @@ footer a:hover {
     font-size: 22px;
     font-weight: 700;
     line-height: 25px;
-    margin: 65px 100px 20px 100px;
+    margin: 65px 80px 20px 80px;
 }
 
 .name input {
@@ -124,7 +130,7 @@ footer a:hover {
     border-radius: 2px;
     border: 1px solid #A9A9A9;
     background: #FDFDFD;
-    width: 340px;
+    width: 300px;
     height: 39px;
     flex-shrink: 0;
     margin-top: 20px;
@@ -162,8 +168,8 @@ footer a:hover {
     font-size: 16px;
     font-weight: 700;
     line-height: 25px;
-    margin-left: 20px;
-    margin-right: 10px;
+    margin-left: 10px;
+    margin-right: 5px;
 }
 
 .add-task input {
@@ -174,8 +180,8 @@ footer a:hover {
     background: #FDFDFD;
     height: 30px;
     flex-shrink: 0;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .add-task button {
@@ -188,8 +194,8 @@ footer a:hover {
     font-size: 14px;
     font-weight: 700;
     line-height: 18px;
-    margin-left: 10px;
-    margin-right: 20px;
+    margin-left: 5px;
+    margin-right: 10px;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -264,4 +270,123 @@ h4 {
 p {
     font-size: 16px;
     line-height: 1.5;
+}
+
+/* Responsive Styling */
+
+/* For tablets & smaller screens */
+
+@media (max-width: 938px) {
+    .add-task {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    
+    .add-task label {
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 1.5px;
+        margin-left: 5px;
+        margin-right: 2.5px;
+    }
+    
+    .add-task input {
+        font-size: 14px;
+        height: 20px;
+        margin-left: 2.5px;
+        margin-right: 2.5px;
+    }
+    
+    .add-task button {
+        height: 20px;
+        font-size: 12px;
+        font-weight: 200;
+        line-height: 1.5;
+        margin-left: 2.5px;
+        margin-right: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    
+}
+
+@media (max-width: 770px) {
+    nav {
+        height: auto;
+        display: flex;  
+        flex-direction: column;
+    }
+
+    nav a {
+        float: none;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        text-align: center;
+    }
+
+    h2 {
+        position: fixed;
+        margin-top: 120px;
+        margin-left: 20px;
+        z-index: 10; 
+    }
+
+    .name {
+        gap: 5px;
+    }
+    
+    .name label {
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 1.5;
+        margin: 40px 60px 10px 60px;
+    }
+    
+    .name input {
+        font-size: 14px;
+        width: 280px;
+        height: 25px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    
+    .name button {
+        width: 100px;
+        height: 30px;
+        flex-shrink: 0;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 18px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width:450px) {
+    .nav a {
+        padding: 15px;
+        font-size: 14px;
+    }
+
+    h2 {
+        margin-top: 80px;
+        margin-left: 20px;
+        font-size: 20px;
+    }
+
+    .content_container{
+        padding: 10px;
+    }
+
+    footer a {
+        font-size: 14px;
+    }
+
+    h4 {
+        font-size: 16px;
+    }
+
+    p {
+        font-size: 14px;
+    }
 }
