Added python code so person would be redirected back to the name screen if they have not input a username Completed: Added messaging for empty state

--- a/templates/completed.html
+++ b/templates/completed.html
@@ -25,6 +25,8 @@
                 <li>
                     {{ task.task }} (completed by {{ task.completed_by }})
                 </li>
+                {% else %}
+                <p>There are no completed tasks yet</p>
                 {% endfor %}
             </ul>
         </div>
