--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,17 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: yellow;
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+main {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Navigation Styling */
@@ -40,49 +51,49 @@ nav a:hover {
 
 /* Background Image */
 
-.background_img {
+/* .background_img {
     width: 100%;
     height: auto;
     z-index: 0;
-    position: static;
-}
+    background-color: yellow; */
+    /* position: static; */
+
 
 /* Universal header styling */
 
 h2 {
-    position: fixed;
+    /* position: fixed; */
     top: 140px;
     left: 80px;
-    z-index: 10;
-    display: inline-flex;
+    /* z-index: 10;
+    display: inline-flex; */
 }
 
 /* Content Div styling */
 
 .content_container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* position: fixed; */
+    margin: 80px auto;
+    max-width: fit-content;
+    /* top: 50%;
+    left: 50%; */
+    transform: none;
+    /* transform: translate(-50%, -50%); */
     background-color: white;
-    z-index: 10;
+    /* z-index: 10; */
     align-items: center;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
 }
 
 /* Footer Styling */
 
 footer{
     background-color: #d9d9d9;
-    overflow: hidden;
-    position: sticky;
-    bottom: 0;
-    z-index: 100;
     width: 100%;
     height: 100px;
+    position: static;
 }
 
 footer a {
@@ -263,6 +274,7 @@ h4 {
 p {
     font-size: 16px;
     line-height: 1.5;
+    margin-right: 20px;
 }
 
 /* Responsive Styling */
