--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,7 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: yellow;
-    /* position: relative; */
+    background-color: #F7D048;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -10,25 +9,30 @@ body{
 main {
     flex: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 /* Navigation Styling */
+
 nav {
     background-color: #d9d9d9;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: sticky;
     top: 0;
     z-index: 100;
     width: 100%;
     height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 
 nav a {
     text-decoration: none;
-    float: left;
     display: block;
     color: black;
     padding: 40px 16px;
@@ -49,38 +53,22 @@ nav a:hover {
     text-align: center;
 }
 
-/* Background Image */
-
-/* .background_img {
-    width: 100%;
-    height: auto;
-    z-index: 0;
-    background-color: yellow; */
-    /* position: static; */
-
-
 /* Universal header styling */
 
-h2 {
-    /* position: fixed; */
-    top: 140px;
-    left: 80px;
-    /* z-index: 10;
-    display: inline-flex; */
+.title {
+    position: static;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 /* Content Div styling */
 
 .content_container {
-    /* position: fixed; */
     margin: 80px auto;
     max-width: fit-content;
-    /* top: 50%;
-    left: 50%; */
     transform: none;
-    /* transform: translate(-50%, -50%); */
     background-color: white;
-    /* z-index: 10; */
     align-items: center;
     padding: 10px;
     border-radius: 10px;
@@ -94,6 +82,7 @@ footer{
     width: 100%;
     height: 100px;
     position: static;
+    bottom: 0;
 }
 
 footer a {
@@ -288,7 +277,7 @@ p {
     }
     
     .add-task label {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 700;
         line-height: 1.5px;
         margin-left: 5px;
@@ -298,6 +287,7 @@ p {
     .add-task input {
         font-size: 14px;
         height: 20px;
+        width: 120px;
         margin-left: 2.5px;
         margin-right: 2.5px;
     }
@@ -327,13 +317,6 @@ p {
         padding-top: 10px;
         padding-bottom: 10px;
         text-align: center;
-    }
-
-    h2 {
-        position: fixed;
-        margin-top: 120px;
-        margin-left: 20px;
-        z-index: 10; 
     }
 
     .name {
@@ -373,10 +356,10 @@ p {
         font-size: 14px;
     }
 
-    h2 {
-        margin-top: 80px;
-        margin-left: 20px;
+    .title {
         font-size: 20px;
+        margin-top: 20px;
+        margin-bottom: 10px;
     }
 
     .content_container{
