--- a/templates/about.html
+++ b/templates/about.html
@@ -16,10 +16,7 @@
     </nav>
 
     <main>
-        <div>
-            <img src="{{ url_for('static', filename='background_img.jpg')}}" alt="overhead view of spray bottle & sponge on a yellow backdrop" class="background_img">
-        </div>
-        <h2>About</h2>
+        <h2 class="title">About</h2>
         <div class="content_container">
             <h4>About HouseMate</h4>
             <p>HouseMate is a household chore tracker.</p>
