--- a/templates/completed.html
+++ b/templates/completed.html
@@ -15,10 +15,7 @@
         <a href="{{ url_for('about') }}">About</a>
     </nav>
     <main>
-        <h2>Completed Tasks</h2>
-        <div>
-            <img src="{{ url_for('static', filename='background_img.jpg')}}" alt="overhead view of spray bottle & sponge on a yellow backdrop" class="background_img">
-        </div>
+        <h2 class="title">Completed Tasks</h2>
         <div class="content_container">
             <ul class="completed-task-list">
                 {% for task in completed_tasks %}
