--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -15,10 +15,7 @@
         <a href="{{ url_for('about') }}">About</a>
     </nav>
     <main>
-        <div>
-            <img src="{{ url_for('static', filename='background_img.jpg')}}" alt="overhead view of spray bottle & sponge on a yellow backdrop" class="background_img">
-        </div>
-        <h2>Leaderboard</h2>
+        <h2 class="title">Leaderboard</h2>
         <div class="content_container">
             <table>
                 <thead>
