--- a/templates/todo.html
+++ b/templates/todo.html
@@ -14,10 +14,7 @@
         <a href="{{ url_for('leaderboard') }}">Leaderboard</a>
         <a href="{{ url_for('about') }}">About</a>
     </nav>
-    <div>
-        <img src="{{ url_for('static', filename='background_img.jpg')}}" alt="overhead view of spray bottle & sponge on a yellow backdrop" class="background_img">
-    </div>
-    <h2>To Do List:</h2>
+    <h2 class="title">To Do List:</h2>
     <div class="content_container">
         <form method="post" class="add-task">
             <label for="task">Add a new task</label>
