--- a/static/style.css
+++ b/static/style.css
@@ -59,13 +59,13 @@ nav a:hover {
     position: static;
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 /* Content Div styling */
 
 .content_container {
-    margin: 80px auto;
+    margin: 40px auto;
     max-width: fit-content;
     transform: none;
     background-color: white;
@@ -77,7 +77,7 @@ nav a:hover {
 
 /* Footer Styling */
 
-footer{
+/* footer{
     background-color: #d9d9d9;
     width: 100%;
     height: 100px;
@@ -99,7 +99,7 @@ footer a {
 footer a:hover {
     text-decoration: underline;
     color: #558dc2
-}
+} */
 
 /* HouseMate (enter name page) Styling */
 .name {
@@ -366,9 +366,6 @@ p {
         padding: 10px;
     }
 
-    footer a {
-        font-size: 14px;
-    }
 
     h4 {
         font-size: 16px;
