--- a/templates/todo.html
+++ b/templates/todo.html
@@ -14,27 +14,26 @@
         <a href="{{ url_for('leaderboard') }}">Leaderboard</a>
         <a href="{{ url_for('about') }}">About</a>
     </nav>
-    <h2 class="title">To Do List:</h2>
-    <div class="content_container">
-        <form method="post" class="add-task">
-            <label for="task">Add a new task</label>
-            <input type="text" name="task" required>
-            <button type="submit">Add Task</button>
-        </form>
-        <ul class="to-do-list">
-            {% for task in tasks %}
-            <li>
-                &#9900 {{ task.task }} (added by {{ task.added_by }})
-                <form action="{{ url_for('complete_task', task_index=loop.index0) }}" method="post" class="complete-task-form">
-                    <button type="submit">Complete</button>
-                </form>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
+    <main>
+        <h2 class="title">To Do List:</h2>
+        <div class="content_container">
+            <form method="post" class="add-task">
+                <label for="task">Add a new task</label>
+                <input type="text" name="task" required>
+                <button type="submit">Add Task</button>
+            </form>
+            <ul class="to-do-list">
+                {% for task in tasks %}
+                <li>
+                    &#9900 {{ task.task }} (added by {{ task.added_by }})
+                    <form action="{{ url_for('complete_task', task_index=loop.index0) }}" method="post" class="complete-task-form">
+                        <button type="submit">Complete</button>
+                    </form>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </main>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
-    <footer>
-        <a href="https://www.freepik.com/free-photo/overhead-view-spray-bottle-sponge-yellow-backdrop_4822625.htm#fromView=search&page=1&position=6&uuid=5a7f5fbc-b00e-4f9b-9dc7-9e06dedc633e">Image by freepik</a>
-    </footer>
 </body>
 </html>
