--- a/templates/todo.html
+++ b/templates/todo.html
@@ -15,7 +15,7 @@
         <a href="{{ url_for('about') }}">About</a>
     </nav>
     <main>
-        <h2 class="title">To Do List:</h2>
+        <h2 class="heading">To Do List:</h2>
         <div class="content_container">
             <form method="post" class="add-task">
                 <label for="task">Add a new task</label>
