--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
     </nav>
 
     <main>
-        <h2 class="title">About</h2>
+        <h2 class="heading">About</h2>
         <div class="content_container">
             <h4>About HouseMate</h4>
             <p>HouseMate is a household chore tracker.</p>
