--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -15,7 +15,7 @@
         <a href="{{ url_for('about') }}">About</a>
     </nav>
     <main>
-        <h2 class="title">Leaderboard</h2>
+        <h2 class="heading">Leaderboard</h2>
         <div class="content_container">
             <table>
                 <thead>
