--- a/static/style.css
+++ b/static/style.css
@@ -380,9 +380,9 @@ p {
         font-size: 14px;
     }
 
-    .title {
+    .heading {
         font-size: 20px;
-        margin-top: 20px;
+        margin-top: 2px;
         margin-bottom: 10px;
     }
 
